fix error overflow de las scroll animations

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+body, bg_mobile {
   background: radial-gradient(ellipse at bottom, #0a131d 0%, #000000 100%);
   background-position: center;
-  background-size: contain;
+  background-size: cover;
 }
 
 @layer base {
@@ -102,14 +102,14 @@ body {
 .glass {
   backdrop-filter: blur(16px) saturate(180%);
   -webkit-backdrop-filter: blur(16px) saturate(180%);
-  background-color: rgba(17, 25, 40, 0.2);
+  background-color: rgba(17, 25, 40, 0.4);
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   transition: 0.5s ease-in-out;
 }
 
 .glass:hover{
-  background-color: rgba(17, 25, 40, 0.7);
+  background-color: rgba(17, 25, 40, 0.9);
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.7);
 }
@@ -120,7 +120,7 @@ body {
 @keyframes show  {
   from {
     opacity: 0;
-    scale: 40%; 
+    scale: 50%; 
   }
   to {
     opacity: 1;
@@ -144,74 +144,18 @@ body {
 @keyframes reveal  {
   from {
     opacity: 0;
+    translate: 0 100px;
   }
   to {
     opacity: 1;
+    transform: 0 0;
   }
 }
 
 .scroll-reveal {
   animation: reveal linear both;
   animation-timeline: view();
-  animation-range: entry 15% cover 30%;
-}
-
-
-
-
-/* Animacion background */
-.gradient-bg {
-  position: fixed; 
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-  background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
-  z-index: -1;
-}
-
-
-.gradients-container {
-  filter: blur(40px);
-  width: 100%;
-  height: 100%;
-}
-
-.g1, .g2, .g3, .g4, .g5 {
-  position: absolute;
-  background: radial-gradient(circle at center, transparent 50%, transparent 50%) no-repeat;
-  mix-blend-mode: var(--blending);
-  width: var(--circle-size);
-  height: var(--circle-size);
-  top: calc(50% - var(--circle-size) / 2);
-  left: calc(50% - var(--circle-size) / 2);
-  opacity: 1;
-}
-
-.g1 {
-  background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0, transparent 50%);
-  animation: moveVertical 30s ease infinite;
-}
-
-.g2 {
-  background: radial-gradient(circle at center, rgba(var(--color2), 0.8) 0, transparent 50%);
-  animation: moveInCircle 20s reverse infinite;
-}
-
-.g3 {
-  background: radial-gradient(circle at center, rgba(var(--color3), 0.8) 0, transparent 50%);
-  animation: moveInCircle 40s linear infinite;
-}
-
-.g4 {
-  background: radial-gradient(circle at center, rgba(var(--color4), 0.8) 0, transparent 50%);
-  animation: moveHorizontal 40s ease infinite;
-}
-
-.g5 {
-  background: radial-gradient(circle at center, rgba(var(--color5), 0.8) 0, transparent 50%);
-  animation: moveInCircle 20s ease infinite;
+  animation-range: entry 10% cover 20%;
 }
 
 /* NAVBAR ANIMATION */
@@ -234,8 +178,8 @@ nav {
   to {
     backdrop-filter: blur(16px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background: rgba(17, 25, 40, 0.3);
+    background: rgba(220, 38, 38, 0.3);
     font-size: 10px;
-    color: rgba(209, 213, 219, 0.8);
+    color: rgba(255, 255, 255, 0.9);
   }
 }
